--- a/hangman-java/.gitignore
+++ b/hangman-java/.gitignore
@@ -10,7 +10,7 @@ gradle/wrapper/
 *.iml
 
 # Bot token - EXTREMELY IMPORTANT
-/src/data/token.txt
+/src/main/resources/token.txt
 
 # Binary
 *.class
