--- a/hangman-java/build.gradle
+++ b/hangman-java/build.gradle
@@ -19,6 +19,9 @@ repositories {
 }
 
 dependencies {
+    compile group: 'org.apache.logging.log4j', name: 'log4j-api', version: '2.13.1'
+    compile group: 'org.apache.logging.log4j', name: 'log4j-core', version: '2.13.1'
+    compile 'org.apache.logging.log4j:log4j-slf4j-impl:2.13.1'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile "net.dv8tion:JDA:$jdaVersion"
 }
